--- a/lib/ucl_web/controllers/page_html/home.html.heex
+++ b/lib/ucl_web/controllers/page_html/home.html.heex
@@ -16,8 +16,9 @@
   <body>
     <div class="container-l">
      <div class="container">
+      <img src= "/images/ucl.png"/>
       <h1>Welcome to UCL!</h1>
-      <div class="typing">What do you want to access?</div>
+     
       <div class="buttons">
         <a href="/users" class="button">
           <i class="fa fa-users"></i> Users
