--- a/lib/ucl_web/components/layouts/ucl.html.heex
+++ b/lib/ucl_web/components/layouts/ucl.html.heex
@@ -43,6 +43,9 @@
             </.link>
           </li>
           <li class="py-4 px-6">
+           <%= if @current_user.id == 6 do %>
+    
+ 
             <.link
               navigate={~p"/rooms"}
               class="flex items-center text-gray-300 hover:text-white text-lg"
@@ -50,6 +53,7 @@
               <i class="fa fa-door-open mr-3"></i>
               Rooms
             </.link>
+                <% end %>
           </li>
           <li class="py-4 px-6">
             <.link
