--- a/lib/ucl_web/live/activity_live/index.html.heex
+++ b/lib/ucl_web/live/activity_live/index.html.heex
@@ -1,8 +1,8 @@
 <.header>
-  Listing Activities
+  Logs
   <:actions>
     <.link patch={~p"/activities/new"}>
-      <.button>New Activity</.button>
+      <.button>New Log</.button>
     </.link>
   </:actions>
 </.header>
@@ -12,10 +12,10 @@
   rows={@streams.activities}
   row_click={fn {_id, activity} -> JS.navigate(~p"/activities/#{activity}") end}
 >
-  <:col :let={{_id, activity}} label="Type"><%= activity.type %></:col>
+  <:col :let={{_id, activity}} label="Activity Type"><%= activity.type %></:col>
   <:col :let={{_id, activity}} label="Start time"><%= activity.start_time %></:col>
   <:col :let={{_id, activity}} label="Stop time"><%= activity.stop_time %></:col>
-  <:col :let={{_id, activity}} label="Product batch"><%= activity.product_batch %></:col>
+  <:col :let={{_id, activity}} label="Description"><%= activity.product_batch %></:col>
    <:col :let={{_id, activity}} label="Room"><%= activity.room_id %></:col>
   <:action :let={{_id, activity}}>
     <div class="sr-only">
