--- a/lib/ucl_web/components/layouts/app.html.heex
+++ b/lib/ucl_web/components/layouts/app.html.heex
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="csrf-token" content={get_csrf_token()} />
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
