--- a/lib/ucl_web/live/activity_live/show.html.heex
+++ b/lib/ucl_web/live/activity_live/show.html.heex
@@ -12,7 +12,8 @@
   <:item title="Type"><%= @activity.type %></:item>
   <:item title="Start time"><%= @activity.start_time %></:item>
   <:item title="Stop time"><%= @activity.stop_time %></:item>
-  <:item title="Product batch"><%= @activity.product_batch %></:item>
+   <:item title="Product ID"><%= @activity.product_id %></:item>
+  <:item title="Batch Number"><%= @activity.batch_number %></:item>
 </.list>
 
 <.back navigate={~p"/activities"}>Back to activities</.back>
