--- a/lib/ucl_web/components/layouts/auth.html.heex
+++ b/lib/ucl_web/components/layouts/auth.html.heex
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="csrf-token" content={get_csrf_token()} />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UCL</title>
     <link rel="stylesheet" href={~p"/assets/app.css"} />
@@ -49,6 +50,8 @@
         max-width: 900px;
         margin: 0 auto;
         text-align: center;
+        justify-content: center;
+  display: flex;
       }
       footer {
         background: #f9fafb;
