--- a/lib/ucl_web/components/layouts/root.html.heex
+++ b/lib/ucl_web/components/layouts/root.html.heex
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <%= @inner_content %>
  <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+   <meta name="csrf-token" content={get_csrf_token()} />
      
