--- a/lib/ucl_web/live/activity_live/index.html.heex
+++ b/lib/ucl_web/live/activity_live/index.html.heex
@@ -15,7 +15,8 @@
   <:col :let={{_id, activity}} label="Activity Type"><%= activity.type %></:col>
   <:col :let={{_id, activity}} label="Start time"><%= activity.start_time %></:col>
   <:col :let={{_id, activity}} label="Stop time"><%= activity.stop_time %></:col>
-  <:col :let={{_id, activity}} label="Description"><%= activity.product_batch %></:col>
+   <:col :let={{_id, activity}} label="Product ID"><%= activity.product_id %></:col>
+  <:col :let={{_id, activity}} label="Batch Number"><%= activity.batch_number %></:col>
    <:col :let={{_id, activity}} label="Room"><%= activity.room_id %></:col>
   <:action :let={{_id, activity}}>
     <div class="sr-only">
