--- a/lib/ucl_web/controllers/page_html/home.html.heex
+++ b/lib/ucl_web/controllers/page_html/home.html.heex
@@ -94,15 +94,12 @@
             <a href="/user/activities/new" class="button">
               <i class="fa fa-tasks"></i> Choose Operation
             </a>
-                <%= if !@current_user do %>
-            <a href="/users/log_in" class="button">
-              <i class="fa fa-user"></i> Log In
-            </a>
-            <%else %>
-            <a href="/users/log_out" class="button">
-              <i class="fa fa-user"></i> Log Out
-                </a>
-            <%end %>
+    -    
+        <!--    <a href="/stop" class="button">
+              <i class="fa fa-stop"></i> Stop Activity
+            </a> -->
+            
+          
           </div>
         </div>
       </div>
