--- a/lib/ucl_web/live/activity_live/show.html.heex
+++ b/lib/ucl_web/live/activity_live/show.html.heex
@@ -12,6 +12,7 @@
   <:item title="Type"><%= @activity.type %></:item>
   <:item title="Start time"><%= @activity.start_time %></:item>
   <:item title="Stop time"><%= @activity.stop_time %></:item>
+   <:item title="Duration in Minutes"><%= @activity.duration %></:item>
    <:item title="Product ID"><%= @activity.product_id %></:item>
   <:item title="Batch Number"><%= @activity.batch_number %></:item>
 </.list>
