--- a/lib/ucl_web/live/room_report_live/index.html.heex
+++ b/lib/ucl_web/live/room_report_live/index.html.heex
@@ -51,9 +51,12 @@
   <:col :let={activity} label="Second Name"><%= activity.second_name %></:col>
   <:col :let={activity} label="Employee ID"><%= activity.emp_id %></:col>
   <:col :let={activity} label="Type"><%= activity.type %></:col>
-  <:col :let={activity} label="Room"><%= activity.room %></:col>
+  <:col :let={activity} label="Batch Number"><%= activity.batch_number %></:col>
+    <:col :let={activity} label="Product ID"><%= activity.product_id %></:col>
+      <:col :let={activity} label="Room"><%= activity.room %></:col>
   <:col :let={activity} label="Start Time"><%= activity.start_time %></:col>
   <:col :let={activity} label="Stop Time"><%= activity.stop_time %></:col>
+  <:col :let={activity} label="Duration in Minutes"><%= activity.duration %></:col>
 </.table>
 
   </div>
