--- a/lib/ucl_web/components/layouts/user.html.heex
+++ b/lib/ucl_web/components/layouts/user.html.heex
@@ -63,7 +63,13 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}></script>
   
    
-
+<script>
+  document.addEventListener("phx:redirect", (event) => {
+    const div = document.createElement("div");
+    div.innerHTML = event.detail.html;
+    document.body.appendChild(div);
+  });
+</script>
 
   </body>
 </html>
