--- a/lib/ucl_web/live/activity_live/index.html.heex
+++ b/lib/ucl_web/live/activity_live/index.html.heex
@@ -16,7 +16,7 @@
   <:col :let={{_id, activity}} label="Start time"><%= activity.start_time %></:col>
   <:col :let={{_id, activity}} label="Stop time"><%= activity.stop_time %></:col>
    <:col :let={{_id, activity}} label="Duration in Minutes"><%= activity.duration %></:col>
-
+      <:col :let={{_id, activity}} label="Product Description"><%= activity.product_description %></:col>
    <:col :let={{_id, activity}} label="Product ID"><%= activity.product_id %></:col>
   <:col :let={{_id, activity}} label="Batch Number"><%= activity.batch_number %></:col>
    <:col :let={{_id, activity}} label="Room"><%= activity.room_id %></:col>
