--- a/lib/ucl_web/live/user_side_live/index.html.heex
+++ b/lib/ucl_web/live/user_side_live/index.html.heex
@@ -25,11 +25,11 @@
     <div class="" id={"activity-#{activity.id}"}>
 
       </div>
-     <div class="">
+     <div class="view-link">
   <.link
     phx-click="stop_activity"
     phx-value-id={activity.id}
-    class="view-link"
+    class=""
   >
     STOP
   </.link>
